The version of the report has been updated from "Preliminary" to "Intermediate".

--- a/D2.2/D2.2_v1.0.tex
+++ b/D2.2/D2.2_v1.0.tex
@@ -41,7 +41,7 @@
 \coverart[width=350pt]{chart}
 
 %define the type of report
-\reporttype{Preliminary Report}
+\reporttype{Intermediate Report}
 
 
 \begin{abstract}
@@ -54,7 +54,7 @@ This report gathers requirements coming from the standards that have to be fulfi
 
 \begin{tabular}{|p{4.4cm}|p{8.7cm}|}
 \hline
-\multicolumn{2}{|c|}{Document information} \\
+\multicolumn{2}{|c|}{\textbf{Document information}} \\
 \hline
 Work Package &  WP2  \\
 Deliverable ID or doc. ref. & D2.2\\
@@ -67,7 +67,7 @@ Document authors (org.)  & Merlin Pokam (AEbt) \\
 
 \begin{tabular}{|p{4.4cm}|p{8.7cm}|}
 \hline
-\multicolumn{2}{|c|}{Review information} \\
+\multicolumn{2}{|c|}{\textbf{Review information}} \\
 \hline
 Last version reviewed & 00.00.00 \\
 \hline
@@ -77,11 +77,11 @@ Main reviewers & Merlin Pokam, Jan Welte \\
 
 \begin{tabular}{|p{2.2cm}|p{4cm}|p{4cm}|p{2cm}|}
 \hline
-\multicolumn{4}{|c|}{Approbation} \\
+\multicolumn{4}{|c|}{\textbf{Approbation}} \\
 \hline
-  &  Name & Role & Date   \\
+  &  \textbf{Name} & \textbf{Role} & \textbf{Date}   \\
 \hline  
-Written by    &  Merlin Pokam & WP2-D2.2 Sub-Task Leader  & \\
+Written by    &  Merlin Pokam & WP2-D2.2 Sub-Task Leader  & See Document evolution\\
 \hline
 Approved by &  &  & \\
 \hline
@@ -89,13 +89,15 @@ Approved by &  &  & \\
 
 \begin{tabular}{|p{2.2cm}|p{2cm}|p{3cm}|p{5cm}|}
 \hline
-\multicolumn{4}{|c|}{Document evolution} \\
+\multicolumn{4}{|c|}{\textbf{Document evolution}} \\
 \hline
-Version &  Date & Author(s) & Justification  \\
+\textbf{Version} &  \textbf{Date} & \textbf{Author(s)} & \textbf{Justification}  \\
 \hline  
 00.00.00 & 10/02/13 & Merlin Pokam &  Document creation  \\
 \hline  
 00.01.00 & 20/03/13 & Merlin Pokam &  Updated, version for review  \\
+\hline
+00.01.00 & 04/04/13 & Merlin Pokam &  The version of the report has been updated from "Preliminary" to "Intermediate" , version for review  \\
 \hline
 \end{tabular}
 
@@ -2104,7 +2106,7 @@ The selected techniques shall be suitable for software SIL4.
 \end{longtable}}
 
 
-\subsubsection{openETCS Software Architecture and Design}
+\subsection{openETCS Software Architecture and Design}
 \label{arc-sw}
 \begin{flushleft}
 The objective of this subclause is to develop an architecture of the openETCS software that achieves the requirements of the software and to identify and evaluate the significance of the interactions of the openETCS software with the hardware.
